# Iroha2_client

./: .gitignore  Cargo.toml  README.md
src/: config.rs  database.rs  lib.rs  main.rs  models.rs  modules.rs  schema.rs  utils.rs
src/examples/: block_stream.rs  register_account.rs
src/hinstAndDrafts/: smartcontract_register.rs
src/modules/: block_listener.rs  web_socket_client.rs
src/smartcontracts/buy_bonds/: Cargo.toml
src/smartcontracts/buy_bonds/src/: lib.rs
src/smartcontracts/smart_test/: Cargo.toml
src/smartcontracts/smart_test/src/: lib.rs
src/smartcontracts/transaction_processing_with_overdraft/: Cargo.toml  build.sh
src/smartcontracts/transaction_processing_with_overdraft/src/: lib.rs
src/utils/: non_zero_handler.rs  web_socket_client.rs
