[package]
name = "iroha_stable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
iroha_client = { git = "https://github.com/hyperledger/iroha", branch = "iroha2-stable" }
iroha_config = { git = "https://github.com/hyperledger/iroha", branch = "iroha2-stable" }
iroha_data_model = { git = "https://github.com/hyperledger/iroha", branch = "iroha2-stable" }
iroha_crypto = { git = "https://github.com/hyperledger/iroha", branch = "iroha2-stable" }
iroha_primitives = { git = "https://github.com/hyperledger/iroha", branch = "iroha2-stable" }
serde_json = "1.0.108"