[package]
name = "iroha_stable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.27.0"
parity-scale-codec = "3.6.9"
parity-scale-codec-derive = "3.6.9"
soketto = "0.7.1"
openssl = "0.10"
iroha_client = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable"}
iroha_config = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable" }
iroha_data_model = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable" }
iroha_crypto = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable" }
iroha_primitives = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable" }
iroha_executor = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable" }
serde_json = { version = "1.0.108", features = [] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.29"
serde = "1.0.193"
httparse = "1.8.0"
attohttpc = "0.26.1"
diesel = { version = "2.1.5", features = ["postgres"] }
dotenv = "0.15.0"

[patch.crates-io]
eyre = { git = "https://github.com/eyre-rs/eyre", tag = "v0.6.8" }
